Added test for new config class and fixed config logging test
Signed-off-by: jasperpotts <jasperpotts@users.noreply.github.com>